syntax = "proto3";
package hello;

service Greetings {
    rpc SayHello (ParamRequest) returns (MessageResponse);
}

message ParamRequest {
    string name = 1;
}

message MessageResponse {
    string message = 1;
}